[package]
name = "test-rustls-platform-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = [
    "rustls-tls-manual-roots",
], default-features = false }
rustls-platform-verifier = "0.3.3"
tokio = { version = "1.39.2", features = ["rt-multi-thread", "macros"] }
env_logger = "0.11.5"

[profile.release]
lto = "thin"
codegen-units = 1